# resonate

./: CMakeLists.txt  README.md  across-the-spider-verse.txt
include/: animation.h  hue_dtls_client.h  hue_rest_client.h  hue_stream_message.h
movies/across-the-spider-verse/: across-the-spider-verse-offsets.txt  across-the-spider-verse.txt  convert
movies/into-the-spider-verse/: convert  into-the-spider-verse-offsets.txt  into-the-spider-verse.txt
src/: animation.c  hue_dtls_client.c  hue_rest_client.c  hue_stream_message.c  main.c
